messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
      - name: messaging-container
        image: your-dockerhub-username/messaging-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  type: ClusterIP
  selector:
    app: messaging
  ports:
  - port: 8000
    targetPort: 8000
